[package]
name = "peachy_macro"
authors = ["nomoreqwerty <vlaadiolus@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"
description = "macros for peachy lib 'https://github.com/nomoreqwerty/peachy'"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.72", features = ["full"] }
quote = "1.0.36"
proc-macro2 = "1.0.86"
